// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · career-tenue 1`] = `
{
  "appearance": {
    "build": 0.49,
    "colors": {
      "cheveux": "#8a4a26",
      "peau": "#9a6f4a",
    },
    "parts": {
      "cheveux": 30530060,
    },
    "seed": 3318005379,
    "sex": "M",
    "species": "humain",
  },
  "tenue": "Flagellant",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · humain-nu 1`] = `
{
  "appearance": {
    "build": 0.65,
    "colors": {
      "cheveux": "#2b241f",
      "peau": "#e8c3a0",
    },
    "parts": {
      "cheveux": 29126955,
    },
    "seed": 932062561,
    "sex": "M",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · override-colors-parts 1`] = `
{
  "appearance": {
    "build": 0.73,
    "colors": {
      "peau": "#112233",
    },
    "parts": {
      "hair": 3,
    },
    "seed": 965617799,
    "sex": "M",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · override-eyes 1`] = `
{
  "appearance": {
    "build": 0.48,
    "colors": {
      "cheveux": "#9a938a",
      "peau": "#9a6f4a",
    },
    "eyes": {
      "D": "<g data-eye-art="noir"><ellipse rx="2.05" ry="1.3" fill="#0c0a10"/><circle cx="0.45" cy="-0.4" r="0.3" fill="#8a7ab0" opacity="0.8"/></g>",
      "G": "<g data-eye-art="reptilien"><ellipse rx="2.05" ry="1.3" fill="#d8c84a"/><ellipse rx="2.05" ry="1.3" fill="none" stroke="#7a6a2a" stroke-width="0.35"/><ellipse rx="0.34" ry="1.08" fill="#140a06"/></g>",
    },
    "parts": {
      "cheveux": 24408249,
    },
    "seed": 781063990,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · override-monster 1`] = `
{
  "appearance": {
    "build": 0.49,
    "colors": {
      "cheveux": "#b89152",
      "peau": "#e8c3a0",
    },
    "monster": {
      "tete": "lezard",
    },
    "parts": {
      "cheveux": 29651255,
    },
    "seed": 948840180,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · override-sex-build 1`] = `
{
  "appearance": {
    "build": 0.7,
    "colors": {
      "cheveux": "#b89152",
      "peau": "#6f4a2f",
    },
    "parts": {
      "cheveux": 31224157,
    },
    "seed": 999173037,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · species-gobelin 1`] = `
{
  "appearance": {
    "build": 0.57,
    "colors": {
      "cuir": "#4a3320",
      "vet1": "#3a5a28",
      "vet2": "#5a3f24",
    },
    "seed": 898507323,
    "sex": "F",
    "species": "Gobelin",
  },
  "tenue": "Mendiant",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · species-orc 1`] = `
{
  "appearance": {
    "build": 0.73,
    "colors": {
      "cuir": "#5a3f24",
      "vet1": "#5a4a30",
      "vet2": "#3a2a1c",
    },
    "seed": 881729704,
    "sex": "M",
    "species": "Orc",
  },
  "tenue": "Mendiant",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > enemyRigProfile · species-skaven 1`] = `
{
  "appearance": {
    "build": 0.57,
    "colors": {
      "cheveux": "#2b241f",
      "peau": "#6f4a2f",
    },
    "parts": {
      "cheveux": 30699856,
    },
    "seed": 982395418,
    "sex": "M",
    "species": "Guerrier des clans",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · humain-nu 1`] = `
{
  "appearance": {
    "build": 0.41,
    "seed": 42,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · override-colors-parts 1`] = `
{
  "appearance": {
    "build": 0.41,
    "colors": {
      "peau": "#112233",
    },
    "parts": {
      "hair": 3,
    },
    "seed": 42,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · override-eyes 1`] = `
{
  "appearance": {
    "build": 0.41,
    "eyes": {
      "D": "<g data-eye-art="noir"><ellipse rx="2.05" ry="1.3" fill="#0c0a10"/><circle cx="0.45" cy="-0.4" r="0.3" fill="#8a7ab0" opacity="0.8"/></g>",
      "G": "<g data-eye-art="reptilien"><ellipse rx="2.05" ry="1.3" fill="#d8c84a"/><ellipse rx="2.05" ry="1.3" fill="none" stroke="#7a6a2a" stroke-width="0.35"/><ellipse rx="0.34" ry="1.08" fill="#140a06"/></g>",
    },
    "seed": 42,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · override-features 1`] = `
{
  "appearance": {
    "build": 0.41,
    "features": [
      "barbe",
    ],
    "seed": 42,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · override-monster 1`] = `
{
  "appearance": {
    "build": 0.41,
    "monster": {
      "tete": "lezard",
    },
    "seed": 42,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · override-sex-build 1`] = `
{
  "appearance": {
    "build": 0.7,
    "seed": 42,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · species-gobelin 1`] = `
{
  "appearance": {
    "build": 0.41,
    "colors": {
      "cuir": "#4a3320",
      "vet1": "#3a5a28",
      "vet2": "#5a3f24",
    },
    "seed": 42,
    "sex": "F",
    "species": "Gobelin",
  },
  "tenue": "Mendiant",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · species-orc 1`] = `
{
  "appearance": {
    "build": 0.41,
    "colors": {
      "cuir": "#5a3f24",
      "vet1": "#5a4a30",
      "vet2": "#3a2a1c",
    },
    "seed": 42,
    "sex": "F",
    "species": "Orc",
  },
  "tenue": "Mendiant",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · species-skaven 1`] = `
{
  "appearance": {
    "build": 0.41,
    "seed": 42,
    "sex": "F",
    "species": "Guerrier des clans",
  },
  "tenue": "Bourgeois",
}
`;

exports[`CARACTÉRISATION — apparence rig (parité avant/après unification du merge) > entityRigProfile · tenue 1`] = `
{
  "appearance": {
    "build": 0.41,
    "seed": 42,
    "sex": "F",
    "species": "humain",
  },
  "tenue": "Mendiant",
}
`;
